syntax = "proto3";

package ai.metathings.service.identityd;

import "google/protobuf/wrappers.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "domain.proto";

message ListDomainsRequest {
	google.protobuf.StringValue name = 1;
	google.protobuf.BoolValue enabled = 2;
}

message ListDomainsResponse {
	repeated Domain domains = 1;
}
